✨ feat(styles): Update styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <header>
       <h1 class="title">Guitar Kings</h1>
+
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -28,6 +29,7 @@
       <section class="section features-section">
         <div class="content-column">
           <h2>Our Guitars are:</h2>
+
           <ul>
             <li>Made with reak Canadian wood</li>
             <li>Crafted by a family-run business</li>
@@ -43,33 +45,34 @@
       </section>
 
       <section class="section reviews-section">
-        <h2>Reviews</h2>
-        <div class="review-list">
-          <div class="review-card">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reiciendis quae, accusamus officia eos officiis possimus voluptas
-              suscipit iure veritatis voluptatum? Id accusamus earum explicabo
-              error perspiciatis eveniet accusantium repellat illo.
-            </p>
-
-            <figure>
-              <figcaption>- Bob Willies</figcaption>
-              <img src="/images/review-bio.jpg" alt="The person bob" />
-            </figure>
-          </div>
-
-          <div class="review-card">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor
-              iusto rem veniam atque dolorem, recusandae culpa magni accusamus
-              repellendus, itaque fugiat quos! Perspiciatis voluptas,
-              consectetur necessitatibus recusandae saepe molestias repellendus.
-            </p>
-            <figure>
-              <figcaption>- Bob Willies</figcaption>
-              <img src="/images/review-bio2.jpg" alt="Sally the person" />
-            </figure>
+        <div class="section--container review-section_inner">
+          <h2>Reviews</h2>
+          <div class="review-list">
+            <div class="review-card">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Reiciendis quae, accusamus officia eos officiis possimus
+                voluptas suscipit iure veritatis voluptatum? Id accusamus earum
+                explicabo error perspiciatis eveniet accusantium repellat illo.
+              </p>
+              <figure>
+                <figcaption>- Bob Willies</figcaption>
+                <img src="/images/review-bio.jpg" alt="The person bob" />
+              </figure>
+            </div>
+            <div class="review-card">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor
+                iusto rem veniam atque dolorem, recusandae culpa magni accusamus
+                repellendus, itaque fugiat quos! Perspiciatis voluptas,
+                consectetur necessitatibus recusandae saepe molestias
+                repellendus.
+              </p>
+              <figure>
+                <figcaption>- Bob Willies</figcaption>
+                <img src="/images/review-bio2.jpg" alt="Sally the person" />
+              </figure>
+            </div>
           </div>
         </div>
       </section>
